Bubble layout: Fix sticker spacing and time position

--- a/res/css/views/rooms/_BubbleLayout.scss
+++ b/res/css/views/rooms/_BubbleLayout.scss
@@ -194,7 +194,7 @@ $left-gutter: 56px;
         .mx_MessageTimestamp {
             visibility: visible !important;
             text-align: center;
-            background: rgba(black, 0.5);
+            background: rgba(0, 0, 0, 0.5);
             color: white;
             left: unset;
             right: 0;
@@ -203,6 +203,10 @@ $left-gutter: 56px;
             border-top-left-radius: 4px;
             border-bottom-right-radius: 4px;
         }
+    }
+
+    .mx_MStickerBody_wrapper {
+        padding: 0;
     }
 
     .mx_MVideoBody {
@@ -236,6 +240,7 @@ $left-gutter: 56px;
 
     .sc_EventTile_media {
         max-width: 600px;
+        position: relative;
         
         // maybe:
         // & + .mx_ReactionsRow {
